// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div>
  <header
    className="header"
  >
    <div
      className="brand"
    >
      <Link
        to="/"
      >
        <SvgrMock
          alt="layout:title"
          className="logo"
          height={85}
          width={183}
        />
      </Link>
      <span
        className="title"
      >
        layout:title
      </span>
    </div>
    <div
      className="navigation"
    >
      <WithProviderContextComponent
        align="baseline"
        justify="space-between"
      >
        <WithProviderContextComponent
          dense={true}
        >
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.workLogs"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.specialApprovals"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.supervisedUsers"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.users"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.hrChangesAndAbsenceRegistration"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.hrYearOverview"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.settings"
              onClick={[Function]}
              priority="outline"
            />
          </WithProviderContextComponent>
        </WithProviderContextComponent>
        <WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="Jan Novak"
              onClick={[Function]}
              priority="flat"
            />
          </WithProviderContextComponent>
          <WithProviderContextComponent>
            <ForwardRef(withForwardedRef(WithProviderContextComponent))
              label="layout:menu.logout"
              onClick={[Function]}
              priority="flat"
            />
          </WithProviderContextComponent>
        </WithProviderContextComponent>
      </WithProviderContextComponent>
    </div>
  </header>
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      Content
    </div>
  </main>
  <footer
    className="footer"
  >
    <p>
      layout:title
    </p>
  </footer>
</div>
`;

exports[`rendering renders correctly with mandatory props only 1`] = `
<div>
  <main
    className="main"
  >
    <div
      className="body"
    >
      <h1
        className="bodyTitle"
      >
        Title
      </h1>
      Content
    </div>
  </main>
  <footer
    className="footer"
  >
    <p>
      layout:title
    </p>
  </footer>
</div>
`;
